--- a/docs/apzvalga/webtrees.tex
+++ b/docs/apzvalga/webtrees.tex
@@ -91,4 +91,4 @@ neigiamų klasifikavimų skaičius.
     \end{tabular}
 \end{ktutable}
 
-Matavimų rezultatai pateikiami \vref{tab:webtrees_rezultatas}.
+Matavimų rezultatai pateikiami \vref{tab:webtrees_rezultatas} lentelėje.
