--- a/docs/references.bib
+++ b/docs/references.bib
@@ -12,6 +12,50 @@ title = {Google safe browsing apis},
 url = {https://developers.google.com/safe-browsing}
 }
 
+
+@inproceedings{fastprop,
+ author = {Fujiwara, Yasuhiro and Irie, Go and Kitahara, Tomoe},
+ title = {Fast Algorithm for Affinity Propagation},
+ booktitle = {Proceedings of the Twenty-Second International Joint Conference on Artificial Intelligence - Volume Volume Three},
+ series = {IJCAI'11},
+ year = {2011},
+ isbn = {978-1-57735-515-1},
+ location = {Barcelona, Catalonia, Spain},
+ pages = {2238--2243},
+ numpages = {6},
+ url = {http://dx.doi.org/10.5591/978-1-57735-516-8/IJCAI11-373},
+ doi = {10.5591/978-1-57735-516-8/IJCAI11-373},
+ acmid = {2283771},
+ publisher = {AAAI Press}
+}
+
+@phdthesis{prop,
+  title={Affinity propagation: clustering data by passing messages},
+  author={Dueck, Delbert},
+  year={2009},
+  school={Citeseer}
+}
+
+@article{comp,
+title = "Comparisons of machine learning techniques for detecting malicious webpages ",
+journal = "Expert Systems with Applications ",
+volume = "42",
+number = "3",
+pages = "1166 - 1177",
+year = "2015",
+note = "",
+issn = "0957-4174",
+doi = "https://doi.org/10.1016/j.eswa.2014.08.046",
+url = "http://www.sciencedirect.com/science/article/pii/S0957417414005284",
+author = "H.B. Kazemian and S. Ahmed",
+keywords = "K-Nearest Neighbor",
+keywords = "Support Vector Machine",
+keywords = "Naive Bayes",
+keywords = "Affinity Propagation",
+keywords = "K-Means",
+keywords = "Supervised and unsupervised learning "
+}
+
 @inproceedings{tangled,
  author = {Kumar, Deepak and Ma, Zane and Durumeric, Zakir and Mirian, Ariana and Mason, Joshua and Halderman, J. Alex and Bailey, Michael},
  title = {Security Challenges in an Increasingly Tangled Web},
