--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -46,6 +46,10 @@
 
 \input{apzvalga/comparison.tex}
 
+\input{apzvalga/linchpin.tex}
+
+\input{apzvalga/blacklists.tex}
+
 \newpage
 \ktuchapter{Medžiagos ir tyrimų metodai}
 \newpage
