--- a/docs/references.bib
+++ b/docs/references.bib
@@ -130,6 +130,41 @@ isbn = {},
   year = 1993
 }
 
+@inproceedings{linchpins,
+author = {Li, Zhou and Arlwais, Sumayah and Xie, Yinglian and Yu, Fang and Wang, XiaoFeng},
+title = {Finding the Linchpins of the Dark Web: a Study on Topologically Dedicated Hosts on Malicious Web Infrastructures},
+booktitle = {IEEE Symposium on Security and Privacy, 2013},
+year = {2013},
+month = {May},
+publisher = {IEEE},
+url = {https://www.microsoft.com/en-us/research/publication/finding-the-linchpins-of-the-dark-web-a-study-on-topologically-dedicated-hosts-on-malicious-web-infrastructures/},
+address = {},
+pages = {},
+journal = {},
+volume = {},
+chapter = {},
+isbn = {},
+}
+
+@Inbook{black,
+author="K{\"u}hrer, Marc
+and Rossow, Christian
+and Holz, Thorsten",
+editor="Stavrou, Angelos
+and Bos, Herbert
+and Portokalidis, Georgios",
+title="Paint It Black: Evaluating the Effectiveness of Malware Blacklists",
+bookTitle="Research in Attacks, Intrusions and Defenses: 17th International Symposium, RAID 2014, Gothenburg, Sweden, September 17-19, 2014. Proceedings",
+year="2014",
+publisher="Springer International Publishing",
+address="Cham",
+pages="1--21",
+isbn="978-3-319-11379-1",
+doi="10.1007/978-3-319-11379-1_1",
+url="http://dx.doi.org/10.1007/978-3-319-11379-1_1"
+}
+
+
 @Article{Wu2008,
 author="Wu, Xindong
 and Kumar, Vipin
