--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -40,6 +40,8 @@
 
 \ktuchapter{Literatūros apžvalga}
 
+\input{apzvalga/taxonomy.tex}
+
 \input{apzvalga/webcop.tex}
 
 \input{apzvalga/webtrees.tex}
@@ -47,8 +49,6 @@
 \input{apzvalga/comparison.tex}
 
 \input{apzvalga/linchpin.tex}
-
-\input{apzvalga/blacklists.tex}
 
 \newpage
 \ktuchapter{Medžiagos ir tyrimų metodai}
