--- a/docs/references.bib
+++ b/docs/references.bib
@@ -146,24 +146,16 @@ chapter = {},
 isbn = {},
 }
 
-@Inbook{black,
-author="K{\"u}hrer, Marc
-and Rossow, Christian
-and Holz, Thorsten",
-editor="Stavrou, Angelos
-and Bos, Herbert
-and Portokalidis, Georgios",
-title="Paint It Black: Evaluating the Effectiveness of Malware Blacklists",
-bookTitle="Research in Attacks, Intrusions and Defenses: 17th International Symposium, RAID 2014, Gothenburg, Sweden, September 17-19, 2014. Proceedings",
-year="2014",
-publisher="Springer International Publishing",
-address="Cham",
-pages="1--21",
-isbn="978-3-319-11379-1",
-doi="10.1007/978-3-319-11379-1_1",
-url="http://dx.doi.org/10.1007/978-3-319-11379-1_1"
+@article{tax,
+  title={A taxonomy of attacks and a survey of defence mechanisms for semantic social engineering attacks},
+  author={Heartfield, Ryan and Loukas, George},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={48},
+  number={3},
+  pages={37},
+  year={2016},
+  publisher={ACM}
 }
-
 
 @Article{Wu2008,
 author="Wu, Xindong
