--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -50,7 +50,10 @@
 
 \input{apzvalga/linchpin.tex}
 
+\input{apzvalga/santrauka.tex}
+
 \newpage
+
 \ktuchapter{Medžiagos ir tyrimų metodai}
 \newpage
 
@@ -67,8 +70,6 @@
 \newpage
 
 \begin{ktuappendices}
-
-\ktusection{Example material}
 
 \end{ktuappendices}
 
