--- a/docs/apzvalga/taxonomy.tex
+++ b/docs/apzvalga/taxonomy.tex
@@ -1,5 +1,3 @@
-\ktusection{Straipsnio A taxonomy of attacks and a survey of defence mechanisms for semantic social engineering attacks analizė}
-
 Straipsnyje \kclong{tax} analizuojamas įvairūs metodai kuriais pasinaudojant apgaunami naudotojai, jie patenka į kenksmingus puslapius. Atakose naudotojas yra išksiriamas kaip silpniausia sistemos grandis \cite{tax}. Tai išskiriama ne tik dėl galimybės apgauti pateikiant klaidinančią informaciją, bet ir naudotojų turimų teisių, naudotojas gali prieiti prie visų sistemos resursų ir įdiegti bet kokią programinę įrangą, net jei ji yra kenksminga. Sistemos naudotoju stengiamasi pasinaudoti semantinėse atakose.
 
 Straipsnyje išskiriamos semantinės atakos yra \cite{tax}:
@@ -13,6 +11,6 @@ Straipsnyje išskiriamos semantinės atakos yra \cite{tax}:
     \item \textbf{Removable Media} -- Fiziniais įrenginiais paremtos atakos.
     \item \textbf{Wireless} -- belaidžiais įrenginiais paremtos atakos.
 \end{enumerate}
-Didelė dalis šių atakų \ref{phishing} \ref{popup} \ref{malvertisement} \ref{socnet} naudojasi tarpinėmis svetainėmis. Tai yra ramstinės svetainės per kurias yra nukreipiamas duomenų srautas ir paskirstomas į kitas kenksmingas svetaines kurios yra naudojamos galutinei naudotojų monetizacijai \cite{linchpins}. Šios atakos pasižymi tuo, kad naudotojai jas gali atskirti per URL adresą, kuris nuves į kenkėjišką svetainę \cite{tax}.
+Didelė dalis šių atakų (\ref{phishing}, \ref{popup}, \ref{malvertisement}, \ref{socnet}) naudojasi tarpinėmis svetainėmis. Tai yra ramstinės svetainės per kurias yra nukreipiamas duomenų srautas ir paskirstomas į kitas kenksmingas svetaines kurios yra naudojamos galutinei naudotojų monetizacijai \cite{linchpins}. Šios atakos pasižymi tuo, kad naudotojai jas gali atskirti per URL adresą, kuris nuves į kenkėjišką svetainę \cite{tax}.
 
 Semantines atakas atpažinti siūlomi mašininio mokymosi modeliai \cite{tax}. Jie gali būti pritaikyti atpažinti atakas pagal įvairias savybes: el. laiškų turinį, svetainių URL adresus, puslapių turinį \cite{tax}.
