internet structure.png

--- a/docs/apzvalga/intro.tex
+++ b/docs/apzvalga/intro.tex
@@ -1,4 +1,4 @@
-Internetas yra vienas iš naujų reiškinių atsiradusių pasaulyje. Jis gali būti nagrinėjamas įvairiomis perspektyvomis. Jis gali atlikti informacijos šaltinio paskirtį, leisti praleisti laisvalaikį socialiniuose tinkluose, apsipirkinėti įvairiose parduotuvėse neišeinant iš namų. Tačiau žiūrint iš techninės pusės, internetas yra daugybė jame pasiekiamų svetainių. Svetaines sudaro vienas ar daugiau puslapių, dar vadinamų tinklalapiais. Šie tinklalapiai talpina tam tikrą turinį bei nuorodas į kitus tinklalapius, taip suformuojant tinklą -- kryptingą grafą kurį sudaro tinklalapiai bei naudotojams naviguoti skirtos nuorodos vedančios į kitus tinklalapius.
+Internetas yra vienas iš naujų reiškinių atsiradusių pasaulyje. Jis gali būti nagrinėjamas įvairiomis perspektyvomis. Jis gali atlikti informacijos šaltinio paskirtį, leisti praleisti laisvalaikį socialiniuose tinkluose, apsipirkinėti įvairiose parduotuvėse neišeinant iš namų. \ktufigure{images/internetas.png}{10 cm}{Interneto svetainių ir tinklapių struktūra} Tačiau žvelgiant iš techninės pusės, internetas yra daugybė jame pasiekiamų svetainių. Svetaines sudaro vienas ar daugiau puslapių, dar vadinamų tinklalapiais \ktufigref{images/internetas.png}. Šie tinklalapiai talpina tam tikrą turinį bei nuorodas į kitus tinklalapius, taip suformuojant tinklą -- kryptingą grafą kurį sudaro tinklalapiai bei naudotojams naviguoti skirtos nuorodos vedančios į kitus tinklalapius.
 
 Svetainėms kurti ir talpinti yra reikalingi žmogiškieji resursai turinio sukūrimui, programinės įrangos paruošimui. Taip pat ir infrastruktūra jų talpinimui. Tai sudaro jų talpinimo kaštus, kuriuos padengia svetainė turi tiesiogiai ar netiesiogiai padengti, nesvarbu ar tai yra e-poarduotuvė ar įmonę reprezentuojantis puslapis skirtas pritraukti klientus. Šie pajamų generavimo metodai yra paremti naudos suteikimu. Naudojami metodai gali būti tiesioginiai - apmokestinami parduodami produktai ar prieiga prie turinio, ar reklama paremtas monetizacijos modelis -- tinklalapiuose talpinamos nuorodos į kitas svetaines, siūlomi produktai. Šie metodai yra naudingi vartotojams, jie gauna informaciją, sužino apie naujus produktus, savo noru perka prekes.
 
