--- a/docs/apzvalga/webcop.tex
+++ b/docs/apzvalga/webcop.tex
@@ -1,8 +1,6 @@
-\ktusection{Straipsnio WebCop: Locating Neighborhoods of Malware on the web analizė}
-
 Straipsnyje \kclong{webcop} siūlomas \mq{WebCop} metodas skirtas atpažinti žalingus internetinius puslapius ir pavojingų tinklapių grupes, kaimynystes.
 
-Šiuo straipnsiu siekiama:
+Šiuo straipnsiu siekiama \cite{webcop}:
     \begin{itemize}
         \item pateikti sistemą gebančią atpažinti pavojingas bei saugias interneto kaimynystes kurias sudaro svetainių nuorodos
          \item pateikti tikslingą, iš apačios aukštyn, veikiantį kenkėjiškos programinės įrangos aptikimo metodą
@@ -10,12 +8,11 @@ Straipsnyje \kclong{webcop} siūlomas \mq{WebCop} metodas skirtas atpažinti ža
          \item pateikti naują būda atrasti kenkėjišką programinę įrangą.
     \end{itemize}
 
-\ktusubsection{Problema}
 Straipsnyje aprašoma žalingos programinės įrangos plitimo problema. Vienas iš būdų kaip į kompiuterius patenka  tokia programinė įranga yra kenksmingų vykdomųjų failų parsisiuntimas iš interneto svetainių. Kenkimo programų plitimą siekiama apriboti naudojant prevencines priemones. Siekiama identifikuoti svetaines platinančias kenksmingus failus ir neleisti naudotojams jas pasiekti, ar juos kitaip perspėti apie potencialiai pavojingą svetainę.
 
-\ktusubsection{Metodas}
+Straipsnyje identifikuotą kenkėjiškos programinės įrangos plitimo problemos sprendimui siūloma WebCop sistema. Tai yra sistema, atpažįstanti kenkėjiškas ir joms gretimas svetaines. Pavyzdžiui jei turima struktūra atitinkanti \ktufigref{images/kenksmingos_A_B.png} pav. tinklapius. Šiuo atveju tiklapiai A ir B nuorodas turi tik į kenksmingą programinę įrangą, dėl togalima laikyti, kad vartotojas negaus jokios naudos iš jų, tik bus skatinamas įsidiegti kenksmingą programinę įrangą. Taip pat, keliaujant interneto grafu nuo apačios, pradedant kenksminga programine įranga galima aptikit ją platinančias svetaines, ir jas taip pat pažymėti kaip kenksmingas.
 
-Straipsnyje identifikuotą kenkėjiškos programinės įrangos plitimo problemos sprendimui siūloma WebCop sistema. Tai yra sistema, atpažįstanti kenkėjiškas ir joms gretimas svetaines.
+\ktufigure{images/kenksmingos_A_B.png}{10 cm}{Pavyzdinė kenksmingos programinės įrangos platinimo svetainės struktūra}
 
 WebCop sistemą WebCop modulis bei dvi duomenų bazės. Viena duomenų bazėje saugomi interneto svetainių tarpusavio ryšių informacija, tai yra interneto svetainių grafas. Antra duomenų bazė laiko informaciją apie identifikuotas kenkėjiškas programas bei jų šaltinius internete. Ši sistema veikia keliais etapais:
     \begin{enumerate}[label=\arabic*.]
@@ -26,11 +23,7 @@ WebCop sistemą WebCop modulis bei dvi duomenų bazės. Viena duomenų bazėje s
 
 Pirmas žingsnis, platinimo svetainių atpažinimas vykdomas jungiant identifikuotų kenkėjų duomenų bazės duomenis su interneto grafo viršūnėmis. Sekančiame žingsnyje išrenkamos svetainės gretimos platinimo svetainėms. Tai yra vienos nuorodos atstumu nuo pavojingų svetainių esančios svetainės. Šie interneto puslapiai yra laikomi žalingos programinės įrangos katalogais. Naudotojų prieiga prie šių puslapių turi būti apribota, siekiant juos apsaugoti. Svetainės esančios dviejų nuorodų atstumu ir talpinančios nežinomas taikomasias programas identifikuojamos kaip potencialiai pavojingos, laikoma kad tai nauja, neidentifikuota kenkėjiška programinė įranga.
 
-\ktusubsection{Duomenų rinkinio aprašas}
-
 WebCop sistema naudoja du duomenų rinkinius -- kenksmingos programinės įrangos registrą bei interneto grafą. Interneto grafo duomenų rinkinys formuotas naudojant interneto paieškos variklio duomenis. Kenkėjišių programų registras kuriamas naudojantis Windows operacinės sistemos naudotojų teikiamais duomenimis.
-
-\ktusubsection{Rezultatai}
 
 \begin{ktutable}{webcop_rezultatas}{WebCop straipsnyje pateikiami matavimų rezultatai}
     \begin{tabular}{| l | r |}
@@ -45,6 +38,4 @@ WebCop sistema naudoja du duomenų rinkinius -- kenksmingos programinės įrango
 
 Lentelėje \vref{tab:webcop_rezultatas} pateikiami straipsnyje atliktų matavimų rezultatai.
 
-\ktusubsection{Metodo analizė}
-
-Šis metodas yra unikalus keliais aspektais -- skenavimas iš viršaus žemyn pakeičiamas skenavimu iš apačios žemyn ir naudojamas egzistuojantis kenkėjiškos programinės įrangos registras vietoje bandymo ją identifikuoti skenavimo metu.
+Šis metodas yra unikalus keliais aspektais -- skenavimas iš viršaus žemyn pakeičiamas skenavimu iš apačios žemyn ir naudojamas egzistuojantis kenkėjiškos programinės įrangos registras vietoje bandymo ją identifikuoti skenavimo metu. Tai leidžia pasinaudoti interneto grafo struktūra, ne tik atskirų svetainių bei tinklapių sąvybėmis.
