--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -10,7 +10,7 @@
 \newcommand{\ktumaster}{Doc. dr. Vytautas Janilionis}
 
 
-\newcommand{\kclong}[1]{\citetitle{#1} \citeauthor{#1} \cite{#1}}
+\newcommand{\kclong}[1]{\cite{#1}}
 \newcommand{\kc}[1]{\citeauthor{#1} \cite{#1}}
 
 
@@ -46,11 +46,11 @@
 
 \input{apzvalga/webcop.tex}
 
+\input{apzvalga/linchpin.tex}
+
 \input{apzvalga/webtrees.tex}
 
 \input{apzvalga/comparison.tex}
-
-\input{apzvalga/linchpin.tex}
 
 \input{apzvalga/santrauka.tex}
 
