--- a/docs/apzvalga/santrauka.tex
+++ b/docs/apzvalga/santrauka.tex
@@ -1,3 +1,3 @@
-\ktusection{Problemos formulavimas}
-
 Pavojingi puslapiai skirstomi į skirtingas kategorijas pagal jų vykdomą \cite{tax} ir pagal jų paskirtį žalingų puslapių tinkle \cite{linchpins}. Jų aptikimui naudojami įvairūs metodai \cite{comp}. Šiame darbe bus tobulinamas tokių puslapių aptikimas, naudojant interneto grafo bei puslapių URL informaciją.
+
+Šiame darbe kenksmingais puslapiais laikomos
