how to basic: graph

--- a/docs/apzvalga/santrauka.tex
+++ b/docs/apzvalga/santrauka.tex
@@ -1,3 +1,5 @@
+
+\newpage
 \ktusection{Darbo tikslas ir uždavinys}
 Pavojingi puslapiai skirstomi į skirtingas kategorijas pagal jų vykdomą \cite{tax} ir pagal jų paskirtį žalingų puslapių tinkle \cite{linchpins}. Jų aptikimui naudojami įvairūs metodai \cite{comp}. Šiame darbe bus tobulinamas tokių puslapių aptikimas, naudojant interneto grafo bei puslapių URL informaciją.
 
