--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -41,24 +41,17 @@
 \ktuchapter{Literatūros apžvalga}
 
 \input{apzvalga/intro.tex}
-
 \input{apzvalga/taxonomy.tex}
-
 \input{apzvalga/webcop.tex}
-
 \input{apzvalga/linchpin.tex}
-
 \input{apzvalga/webtrees.tex}
-
 \input{apzvalga/comparison.tex}
-
-\newpage
-
 \input{apzvalga/santrauka.tex}
 
 \newpage
 
 \ktuchapter{Medžiagos ir tyrimų metodai}
+\input{metodas/input.tex}
 \newpage
 
 \ktuchapter{Tyrimų rezultatai ir aptarimas}
