--- a/docs/ktua4.sty
+++ b/docs/ktua4.sty
@@ -197,6 +197,7 @@
 \algrenewcommand\algorithmicdo{\textbf{kartoti}}
 \algrenewcommand\algorithmicfor{\textbf{visiems}}
 \algrenewcommand\algorithmicrepeat{\textbf{kartoti}}
+\algrenewcommand\algorithmicuntil{\textbf{kol}}
 \algrenewcommand\algorithmicif{\textbf{jei}}
 \algrenewcommand\algorithmicprocedure{\textbf{procedūra}}
 \algrenewcommand\algorithmicfunction{\textbf{funkcija}}
