--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -54,6 +54,7 @@
 
 \ktuchapter{Medžiagos ir tyrimų metodai}
 \input{metodas/input.tex}
+\input{metodas/metodai.tex}
 \newpage
 
 \ktuchapter{Tyrimų rezultatai ir aptarimas}
