--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -10,11 +10,15 @@
 \newcommand{\ktumaster}{Doc. dr. Vytautas Janilionis}
 
 
+
 \newcommand{\kclong}[1]{\cite{#1}}
 \newcommand{\kc}[1]{\citeauthor{#1} \cite{#1}}
-
+\newcommand{\itrain}{$\mathbf{T_m}$}
+\newcommand{\train}{\mathbf{T_m}}
 
 \documentclass[12pt, a4paper, onecolumn, titlepage, oneside, intlimits]{report}
+
+\usepackage{bm}
 
 \usepackage{ktua4}
 
