--- a/docs/metodas/metodai.tex
+++ b/docs/metodas/metodai.tex
@@ -10,4 +10,4 @@ Lyginami trys skirtingi klasifikavimo modeliai:
 \ktusubsection{C4.5 sprendimų medžio klasifikatorius}
 \input{metodas/medis.tex}
 \ktusubsection{Atraminių vektorių mašinų klasifikatorius}
-\ktusubsection{Dirbtinio neuroninio tinklo klasifikatorius}
+\input{metodas/vektoriai.tex}}
