--- a/docs/references.bib
+++ b/docs/references.bib
@@ -206,6 +206,16 @@ doi="10.1007/978-3-319-46298-1_30",
 url="http://dx.doi.org/10.1007/978-3-319-46298-1_30"
 }
 
+@article{ksvm,
+  title={Fast kernel classifiers with online and active learning},
+  author={Bordes, Antoine and Ertekin, Seyda and Weston, Jason and Bottou, L{\'e}on},
+  journal={Journal of Machine Learning Research},
+  volume={6},
+  number={Sep},
+  pages={1579--1619},
+  year={2005}
+}
+
 @techreport{Ardi14a,
   author = {Ardi, Calvin and Heidemann, John},
   title = {Web-scale Content Reuse Detection (extended)},
